RESOLVED FIXED156670
JS::DFG::nodeValuePairListDump does not compile with libstdc++ 4.8
https://bugs.webkit.org/show_bug.cgi?id=156670
Summary JS::DFG::nodeValuePairListDump does not compile with libstdc++ 4.8
Konstantin Tokarev
Reported 2016-04-16 16:09:21 PDT
Error message produced by clang 3.8 (g++ 4.8 also produces error, but message is less readable): /usr/bin/../lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/stl_algo.h:2263:28: error: binding value of type 'const JSC::DFG::BasicBlock::SSAData::NodeAbstractValuePair' to reference to type 'JSC::DFG::BasicBlock::SSAData::NodeAbstractValuePair' drops 'const' qualifier while (__comp(*__first, __pivot)) ^~~~~~~
Attachments
Patch (1.78 KB, patch)
2016-04-16 16:14 PDT, Konstantin Tokarev
no flags
Konstantin Tokarev
Comment 1 2016-04-16 16:14:25 PDT
WebKit Commit Bot
Comment 2 2016-04-16 18:29:43 PDT
Comment on attachment 276567 [details] Patch Clearing flags on attachment: 276567 Committed r199636: <http://trac.webkit.org/changeset/199636>
WebKit Commit Bot
Comment 3 2016-04-16 18:29:45 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.