JS::DFG::nodeValuePairListDump does not compile with libstdc++ 4.8 https://bugs.webkit.org/show_bug.cgi?id=156670

Patch by Konstantin Tokarev <annulen@yandex.ru> on 2016-04-16
Reviewed by Darin Adler.

* dfg/DFGNode.h:
(JSC::DFG::nodeValuePairListDump): Modified to use lambda as comparator.

Canonical link: https://commits.webkit.org/174771@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@199636 268f45cc-cd09-0410-ab3c-d52691b4dbfc